# prepend-jira-ticket-number

./: .pre-commit-hooks.yaml  README.md  prepender-jira-number.py  pyproject.toml
prepend_jira_ticket_number/: prepend_jira_ticket_number.py
tests/: test_prepend_jira_ticket_number.py
