[tool.poetry]
name = "prepend-jira-ticket-number"
version = "0.1.0"
description = ""
authors = ["Justin Grant <jlgrock@gmail.com>"]

[tool.poetry.scripts]
prepend_jira_ticket_number = "prepend_jira_ticket_number.prepend_jira_ticket_number:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
